[gd_scene load_steps=3 format=3 uid="uid://cxviehxgev3dp"]

[ext_resource type="Script" path="res://addons/cosmostasia_editor/scripts/resource_selector/resource_file_selector.gd" id="1_f27h1"]
[ext_resource type="PackedScene" uid="uid://bm6atc6gmel1k" path="res://addons/cosmostasia_editor/scenes/resource_selector/resource_picker.tscn" id="1_vknt5"]

[node name="ResourceSelector" type="ScrollContainer"]
custom_minimum_size = Vector2(0, 32)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
script = ExtResource("1_f27h1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ResourcePicker" parent="HBoxContainer" instance=ExtResource("1_vknt5")]
unique_name_in_owner = true
layout_mode = 2

[node name="ResourcePathLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CreateButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
auto_translate = false
text = "Create New"

[node name="FileSelector" type="FileDialog" parent="HBoxContainer/CreateButton"]
unique_name_in_owner = true
size = Vector2i(362, 157)
filters = PackedStringArray("*.tres ; Resources")

[node name="RefreshButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
auto_translate = false
text = "Reload"

[connection signal="resource_picked" from="HBoxContainer/ResourcePicker" to="." method="_on_resource_picked"]
[connection signal="pressed" from="HBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
